# semantics-ar

./: .gitignore  CMakeLists.txt
build_verify/: AH1_AH2_analysis_20260707.md  AH1_decoded_20260707.csv  AH1_events_all_20260707.txt  AH1_events_explicit_20260707.txt  AH1_events_lazy_20260707.txt  AH1_events_pressure_20260707.txt  AH3_analysis_20260707.md  AH3_decoded_20260707.csv  AH3_events_20260707.txt
capture/: CMakeLists.txt
capture/include/: sar_capture.h
capture/src/: capture.c
cmake/: SemanticsARConfig.cmake
control/: CMakeLists.txt
control/include/: sar_control.h
control/src/: ctl_mem.h  handshake.c  mode.c  msg.c  whitelist.c
demokit/: Demo.cmd  README-OPERATOR.txt  Reset-SarDemo.ps1  Start-SarDemo.ps1
demokit/attack/: Demo-Attack.cmd  RUNBOOK.md  Reset-Attack.ps1  Seed-Sandbox.ps1  Start-Attack.ps1
demokit/lib/: BootPolicy.psm1  Guard.psm1  Preflight.psm1  State.psm1  Ui.psm1
docs/: CONSTITUTION.md  CONSTITUTION_PART_XII.md  DEBUGGING.md  DESIGN_REVIEW_PRESERVATION.md  DEVELOPMENT_WORKFLOW.md  EXPERIENCE_CHARTER.md  EXTERNAL_VALIDATION.md  FRONTEND_DESIGN.md  HANDOFF.md  SLICE1_DESIGN.md  SLICE2_DESIGN.md  SLICE3_DESIGN.md  SLICE4_DESIGN.md  SLICE5_DESIGN.md  SLICE6_DESIGN.md  TESTING.md  VM_VERIFICATION_DESIGN.md
driver/: CMakeLists.txt  bypassio.c  capture.c  capture.h  commport.c  commport.h  driver.c  driver.h  eventlog.c  eventlog.h  feature.c  feature.h  keystore_persist.c  keystore_persist.h  ntsystem.h  obguard.c  obguard.h  operations.c  phantom.c  phantom.h  preserve.c  preserve.h  processnotify.c  recovery.c  recovery.h  seam.c  seam.h  semantics_ar.inf  semantics_ar.vcxproj  service_pubkey.h  state.c  state.h  store_io.c  store_io.h
driver/include/: battery_seam.h  driver_internal.h
driver/src/comm/: comm_port.c
driver/src/context/: context_mgr.c
driver/src/conviction/: emit.c  emit.h
driver/src/dtaxis/: create.c  fsctl.c  section.c  setinfo.c  write.c
driver/src/entry/: driver_main.c
driver/src/identity/: process_monitor.c  trusted_pid.c
driver/src/preserve/: journal.c  mac.c  preserve.h  shadow_store.c
driver/src/tgate/: tgate.c  tgate.h
elam/: CMakeLists.txt  elam.c
engine/: CMakeLists.txt
engine/ciphers/: aes.c  aes.h  aria.c  camellia.c  camellia.h  cipher_common.h  des.c  des.h  seed.c  seed.h  stream.c  stream.h
engine/host/: recover_file.c  sar_recover_file.h
engine/include/: conviction_engine.h  sar_gate.h  sar_keystore.h  sar_keystore_mgr.h  sar_preserve.h  sar_recover.h
engine/src/: battery.c  ctr_layout.h  eng_mem.h  gate.c  keystore.c  keystore_mgr.c  modes.c  modes.h  preserve.c  recover.c  sha256.c  sha256.h
frontend/: SemanticsAr.slnx
frontend/SemanticsAr.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ModeSwitchWindow.xaml  ModeSwitchWindow.xaml.cs  OnboardingStore.cs  OnboardingWindow.xaml  OnboardingWindow.xaml.cs  SemanticsAr.App.csproj  TrayIconController.cs  app.manifest
frontend/SemanticsAr.Core.Tests/: BudgetAttributionTests.cs  BudgetSessionTests.cs  BudgetSnapshotTests.cs  ElevatedErrorTests.cs  ElevatedErrorTextTests.cs  ExemptionSessionTests.cs  ExemptionTests.cs  FileClassifierTests.cs  IncidentGrouperTests.cs  InteropLayoutTests.cs  JournalServiceTests.cs  PostureEvaluatorTests.cs  PostureServiceTests.cs  RecoveryLadderTests.cs  RecoverySessionTests.cs  RestorePlannerTests.cs  SarApiIntegrationTests.cs  SarControlIntegrationTests.cs  SemanticsAr.Core.Tests.csproj
frontend/elevation-host/: CMakeLists.txt  SemanticsArElevation.idl  resources.rc
frontend/elevation-host/include/: elevation_iface.h  host_internal.h
frontend/elevation-host/src/: class_factory.cpp  control_object.cpp  host_main.cpp  registration.cpp
frontend/mocks/: README.md  (+1 more)
frontend/sarapi/: CMakeLists.txt
frontend/sarapi/include/: sarapi.h
frontend/sarapi/src/: control_client.c  events_client.c  posture_client.c  server_identity.c  server_identity.h
frontend/sarapi/tools/: posture_probe.c
installer/: Build-DemoKit.ps1  Build-SarPackage.ps1  README.md  SemanticsAr-Setup.ps1
scripts/: build_driver.bat  build_harness.bat  host_shot.ps1  package_driver.ps1  vm_diag_stream.ps1  vm_probe_ah3.ps1  vm_probe_mmap.ps1  vm_run_gui.ps1  vm_smoke_installer.ps1  vm_soak_broad.ps1  vm_soak_recover.ps1  vm_timing.ps1  vm_verify_attribution.ps1  vm_verify_coverage.ps1  vm_verify_demokit.ps1  vm_verify_exemption.ps1  vm_verify_integrity_halt.ps1  vm_verify_new.ps1  vm_verify_preserve.ps1  vm_verify_recover_isolation.ps1  vm_verify_selfprotect.ps1  vm_verify_stream.ps1  vm_verify_t2.ps1
service/: CMakeLists.txt  attrib.c  attrib.h  autoverdict.c  autoverdict.h  commclient.c  commclient.h  control.c  control.h  identity.c  identity.h  main.c  pipe_server.c  pipe_server.h  posture.c  posture.h  recovery.c  recovery.h
service/include/: key_capture.h  service_internal.h
service/src/control/: installer.cpp  model_control.cpp  status.cpp
service/src/conviction/: chain_handler.cpp  keystore.cpp  mode_verify.c  mode_verify.h  oracle.cpp  oracle_battery.cpp  oracle_battery.h
service/src/conviction/ciphers/: aria.c  aria.h  camellia.c  cipher_common.h  hc128.c  hc128.h  seed.c  sm4.c  sm4.h  sosemanuk.c  sosemanuk.h  stream.c  stream.h
service/src/core/: config.cpp  main.cpp
service/src/identity/: process_control.cpp  process_tree.cpp  whitelist.cpp
service/src/ingest/: filter_listener.cpp
service/src/recovery/: eviction.cpp  journal_restore.cpp  restore.cpp  volume_map.cpp
tests/: CMakeLists.txt  test_capture.c  test_chassis.c  test_engine.c  test_gate.c  test_handshake_crypto.c  test_keystore.c  test_keystore_mgr.c  test_phantom.c  test_preserve.c  test_recover.c  test_schedule.c  test_util.h
tests/harness/: README.md  benign_novel.c  benign_workload.c  destroyer_matrix.c  inject_probe.c  mmap_over.c  mmap_stream.c  noninplace_destroyer.c  partial_encryptor.c  perf_bench.c  phantom_enum.c  preserve_test.c  ransom_sim.c  splitter.c  stream_transform.c  wipe_encryptor.c  wipe_reuse.c  wipe_test.c
tools/: CMakeLists.txt  provision_handshake_key.c  sar_install.c  sarctl.c
(+113 files in other folders)
