add_executable(test_engine test_engine.c)
add_executable(test_keystore test_keystore.c)
add_executable(test_gate test_gate.c)

foreach(t test_engine test_keystore test_gate)
    target_link_libraries(${t} PRIVATE semantics_ar_engine)
    set_target_properties(${t} PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON)
    if(MSVC)
        target_compile_options(${t} PRIVATE /W4 /WX)
    else()
        target_compile_options(${t} PRIVATE -Wall -Wextra -Werror)
    endif()
    add_test(NAME ${t} COMMAND ${t})
endforeach()

add_executable(test_chassis test_chassis.c)
target_link_libraries(test_chassis PRIVATE semantics_ar_control)
set_target_properties(test_chassis PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON)
if(MSVC)
    target_compile_options(test_chassis PRIVATE /W4 /WX)
else()
    target_compile_options(test_chassis PRIVATE -Wall -Wextra -Werror)
endif()
add_test(NAME test_chassis COMMAND test_chassis)

if(NOT WIN32)
    add_executable(test_recover test_recover.c)
    target_link_libraries(test_recover PRIVATE semantics_ar_recovery_host)
    set_target_properties(test_recover PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON)
    target_compile_options(test_recover PRIVATE -Wall -Wextra -Werror)
    add_test(NAME test_recover COMMAND test_recover)
endif()
